# machine_learning

./: .gitmodules  README.md
pneumonia/: .gitignore  flux.jl  pytorch.py  tf.py
pneumonia/cpptorch/: CMakeLists.txt
pneumonia/cpptorch/src/: main.cc
policy_gradients/: compile_commands.json  flux.jl  pytorch.py  tf.py  tf.swift
policy_gradients/cpptorch/: build.sh  run.sh
policy_gradients/cpptorch/src/: main.cc
